# tete

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  rust-toolchain.toml
.cargo/: config.toml
src/: core0.rs  core0_main.rs  core0_task.rs  core1.rs  core1_main.rs  core1_task.rs  lib.rs  main.rs  task.rs  tasks.rs  timeout.rs  vreg.rs
src/tasks/: core0.rs  core1.rs  state.rs
