[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "time-driver-any",
    "stm32g031j6",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = [
] }
embassy-executor = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.2", git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-32_768",
] }


cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
embedded-hal = "0.2.7"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.6.0", features = [
    "unsafe-assume-single-core",
] }

[profile.dev]
opt-level = "s"
lto = "thin"

[profile.release]
opt-level = "z"
lto = "fat"
