[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-time = { version = "0.2", git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rom-func-cache",
    "intrinsics",
    "rom-v2-intrinsics",
] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
opt-level = "z"
lto = "fat"
