[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
cyw43 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
cyw43-pio = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "overclock",
] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-wiznet = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rom-func-cache",
    "intrinsics",
    "rom-v2-intrinsics",
] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
panic-rtt-target = "0.1.3"
pio = "0.2.1"
pio-proc = "0.2.2"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
rtt-target = "0.5.0"
static_cell = "2.1.0"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
